adjusts 17.03.2018 part IV

--- a/template/page-about.html
+++ b/template/page-about.html
@@ -243,10 +243,10 @@
                 <div class="special-container">
                   <div class="owl-carousel content-slider-with-controls">
                     <div class="overlay-container-2 overlay-visible rounded">
-                      <img src="images/page-about-1.png" alt="Image page about slider 1">
+                      <img class="rounded" src="images/page-about-1.png" alt="Image page about slider 1">
                     </div>
-                    <div class="overlay-container-2 overlay-visible">
-                      <img src="images/page-about-2.png" alt="Image page about slider 2">
+                    <div class="overlay-container-2 overlay-visible rounded">
+                      <img class="rounded" src="images/page-about-2.png" alt="Image page about slider 2">
                     </div>
                   </div>
                 </div>
