--- a/template/page-tech-1.html
+++ b/template/page-tech-1.html
@@ -50,7 +50,7 @@
     <!-- Used font for body: Roboto -->
     <!-- Used font for headings: Raleway -->
     <!-- Use css/rtl_typography-default.css for RTL version -->
-    <link href="css/typography-default.css" rel="stylesheet" >
+    <link href="css/typography.css" rel="stylesheet" >
     <!-- Color Scheme (In order to change the color scheme, replace the blue.css with the color scheme that you prefer)-->
     <link href="css/skins/green.css" rel="stylesheet">
   
@@ -126,7 +126,7 @@
 
                   <!-- logo -->
                   <div id="logo" class="logo">
-                    <a href="#" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
+                    <a href="index.html" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
                   </div>
 
                 </div>
@@ -138,11 +138,7 @@
                 <!-- header-second start -->
                 <!-- ================ -->
                 <div class="header-second clearfix">
-                  
-                <!-- main-navigation start -->
-                <!-- classes: -->
-                <!-- "onclick": Makes the dropdowns open on click, this the default bootstrap behavior e.g. class="main-navigation onclick" -->
-                <!-- "animated": Enables animations on dropdowns opening e.g. class="main-navigation animated" -->
+                
                 <!-- ================ -->
                 <div class="main-navigation main-navigation--mega-menu  animated">
                   <nav class="navbar navbar-expand-lg navbar-light p-0">
@@ -213,19 +209,15 @@
       </div>
       <!-- header-container end -->
 
+      <!-- start page -->
+
       <!-- banner start -->
       <!-- ================ -->
-      <div class="banner dark-translucent-bg video-background pv-40 dark-translucent-bg hovered">
-        <div class="video-background-poster" style="background-image: url('');"></div>
-        <video autoplay loop muted style="top: auto; bottom: 0; left: 0;" poster="">
-          <source src="videos/video-case-1.mp4" type="video/mp4">
-          <source src="videos/background-video.webm" type="video/webm">
-        </video>
-        
+      <div class="banner dark-translucent-bg" style="background-image:url('images/page-tech-1-banner.png'); background-position: 50% 27%;">
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
-              <h2 class="title">Calibradora eletrônica de tomates miúdos</h2>
+              <h2 class="title">Câmeras Hiperespectrais</h2>
               <div class="separator"></div>
             </div>
           </div>
@@ -237,206 +229,66 @@
       <!-- ================ -->
       <section class="main-container padding-bottom-clear">
 
-        <div class="container mb-80">
-          <div class="row">
-
-            <!-- main start -->
-            <!-- ================ -->
-            <div class="main col-12 section">
-              <div class="row">
-                <div class="col-lg-6">
-                  <p>Nossa calibradora eletrônica classifica os frutos em diversos tamanhos, além de remover os verdes e os com defeitos, trazendo mais qualidade e padronização para os seus produtos.</p>
-                  <p>Obtenha ótimos resultados com qualquer variedade de tomates miúdos, como o grape, morgado, tomini, rosso, etc.</p>
-                  <p>Nossas máquinas contam com um <strong>avançado sistema de visão computacional</strong>, desenvolvido com as mais modernas técnicas de processamento de imagem e câmeras industriais, o que garante uma classificação rápida e precisa, chegando a classificar até <strong>90.000 tomates por hora.</strong></p>
-                </div>
-                <div class="col-lg-6">
-                  
-                  <div class="owl-carousel content-slider-with-controls">
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-1.png" alt="">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-2.png" alt="">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-3.png" alt="">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-4.png" alt="">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-5.png" alt="">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-6.png" alt="">
-                    </div>
+        <!-- section text start -->
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-6 text-justify mb-20">
+                <p>Olhe para o seu braço por um instante e pense no que acabou de ver. É bem provável que os seus olhos tenham registrado aspectos como a cor, o tamanho e o formato dele. A ausência ou a presença de pelos – assim como a cor destes – provavelmente também foi notada. Talvez uma ou outra veia mais saltada também não tenha passado despercebida aos seus olhos.</p>
+                <p>Todas essas características do seu braço só puderam ser identificadas por você graças à habilidade ocular de interpretar as interações entre a luz e os objetos. Mas há muitas outras informações, propriedades e características do seu braço que passam despercebidas aos olhos. Eles não conseguem enxergar, por exemplo, radiações ultravioletas e infravermelhas e, por isso, muitas informações permanecem invisíveis a eles.</p>
+                <p>Agora, imagine esse mesmo braço sendo observado por uma camêra de tecnologia de ponta, como é o caso de uma câmera hiperespectral. O que poderia ser constatado? A resposta é: quase tudo.</p>
+              </div>
+              <div class="col-lg-6">
+                <div class="special-container">
+                  <div class="overlay-container overlay-visible rounded">
+                    <img src="images/page-case-1-1.png" alt="">
                   </div>
-
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        <!-- section text end -->
 
-        <!-- section start -->
-        <div class="light-gray-bg pv-70 section">
+        <!-- section text start -->
+        <div class="section">
           <div class="container">
-            <h3>Como funciona</h3>
-            <div class="separator-2"></div>        
-            <div class="row d-flex row-eq-height">
-
-              <div class="col-md-3">
-                <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-1.svg"></span>
-                  <h3>Alimentação</h3>
-                  <div class="separator clearfix"></div>
-                  <p>Os tomates muito pequenos são removidos previamente por um sistema de rolos fixos ou no próprio polidor. A alimentação é feita dosando a quantidade de tomates em cada linha da máquina de forma ajustável.</p>
-                </div>
+            <div class="row">
+              <div class="col-lg-12 text-justify">
+                <p>Uma câmera hiperespectral é tão potente que poderia enxergar em detalhes os padrões das suas veias. Ela poderia até mesmo observar as diferenças na intensidade da coloração da pele, identificando possíveis tumores ou problemas de saúde nela.</p>
+                <p>Isso acontece porque câmeras hiperespectrais conseguem observar e interpretar muito mais informações sobre as interações entre a luz e o seu braço do que os seus olhos ou câmeras comuns. Enquanto olhos e câmeras comuns são capazes apenas de enxergar alguns comprimentos de luz e espectros, câmeras hiperespectrais são dotadas de tecnologia capaz de observar centenas de milhares de espectros de luz de um mesmo objeto ou material. Dessa forma, elas conseguem até mesmo distinguir a composição química dos materiais ou objetos analisados.</p>
+                <p>Essa capacidade visual inigualável das câmeras hiperespectrais traz óbvias vantagens a diversos setores da sociedade – como é o caso do <strong>setor agrícola.</strong></p>
+                <p>Um produtor de tomate que usa a tecnologia hiperespectral consegue identificar a ausência de nutrientes em seus tomates logo no início do processo, sendo possível, assim,  corrigir uma colheita aquém do ideal. Um produtor de eucaliptos que usa máquinas com câmeras hiperespectrais vai conseguir identificar o estado de saúde e a presença de doenças já nas mudas da planta.</p>
+                <p>Ao permitir que o produtor tenha acesso a informações muito mais precisas sobre os seus produtos, a tecnologia hiperespectral antecipa problemas e soluções e garante o aumento da eficiência e da qualidade do produto final.</p>
               </div>
-
-              <div class="col-md-3">
-                <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-2.svg"></span>
-                  <h3>Imagem</h3>
-                  <div class="separator clearfix"></div>
-                  <p>Após a singularização dos tomates nos carrinhos, a calibradora faz uma série de 8 fotografias de cada fruto, em posições diferentes, garantindo uma inspeção 360º.</p>
-                </div>
-              </div>
-
-              <div class="col-md-3">
-                <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-3.svg"></span>
-                  <h3>Classificação</h3>
-                  <div class="separator clearfix"></div>
-                  <p>Por meio de um algoritmo sofisticado, a calibradora avalia o tamanho de cada tomate, sua cor e eventuais defeitos na casca ou na forma. Uma vez definida a classe do tomate, ele é soprado no respectivo compartimento.</p>
-                </div>
-              </div>
-
-              <div class="col-md-3">
-                <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-3.svg"></span>
-                  <h3>Calibração</h3>
-                  <div class="separator clearfix"></div>
-                  <p> O critério de seleção é totalmente personalizável e pode ser feito de forma manual (o produtor define as faixas de tamanho para cada nível) ou automática, através da funcionalidade de aprendizado artificial.</p>
-                </div>
-              </div>
-
-              </div>
+            </div>
           </div>
         </div>
-        <!-- section end -->
+        <!-- section text end -->
 
-        <!-- section start -->
+        <!-- section highlight start -->
+        <div class="light-gray-bg section" style="background-image:url(images/bg-light-gray-default.png)">
+          <div class="container">
+            <div class="row">      
+              <div class="col-md-12 text-justify mt-10">
+                <p><strong>Aqui na MVISIA, trabalhamos com essa tecnologia de ponta nas nossas máquinas para garantir a maior eficiência possível aos nossos clientes. Quer saber mais sobre como podemos aplicar essa tecnologia ao seu negócio? Sinta-se à vontade para entrar em contato conosco e marcar uma reunião!</strong></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- section highlight end -->
+
+      <!-- section others start -->
         <div class="pv-70 section mt-20">
           <div class="container">
-            <h3>Veja em funcionamento</h3>
-            <div class="separator-2"></div>
-            <div class="video-case">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/aq4SkI2Lck4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-              </div>
-            </div>
+            <h3 class="title-subsection">Veja outras tecnologias</h3>
+            <div class="separator-2 mb-30"></div>   
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-sistema-uvas.html">Visão computacional<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-sistema-uvas.html">Inteligência artificial<i class="fa fa-angle-double-right"></i></a>
           </div>
         </div>
+      <!-- section others end -->
       </section>
-      <!-- section end -->
-
-      <!-- section start -->
-      <div class="dark-bg pv-70 section">
-        <div class="container">
-          <div class="row">      
-            
-            <div class="col-md-4 mb-40">
-              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
-                <div class="body">
-                  <h4 class="title">Controle de qualidade</h4>
-                  <p>A calibradora eletrônica identifica e remove os tomates que apresentam defeitos de forma, na casca, e também aqueles com coloração indesejada, garantindo a qualidade dos frutos que serão embalados. A classificação dos saudáveis em até 6 níveis de tamanho garante uma padronização excepcional.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4 mb-40">
-              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
-                <div class="body">
-                  <h4 class="title">Redução de mão-de-obra</h4>
-                  <p>A classificadora eletrônica simplesmente elimina a necessidade da inspeção e separação manual dos produtos, pois a classificação é feita com precisão e consistência. Realoque seus colaboradores para outras fases da produção.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4 mb-40">
-              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
-                <div class="body">
-                  <h4 class="title">Configuração automática</h4>
-                  <p>O critério de classificação da máquina pode ser ajustado a partir de exemplos separados manualmente por você. Capacidade de armazenamento de configurações (ou treinos) ilimitada. Crie treinos para separar seus frutos dos mais variados estágios de desenvolvimento da planta.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4 mb-40">
-              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
-                <div class="body">
-                  <h4 class="title">Relatórios detalhados</h4>
-                  <p>Além dos benefícios de ganho de qualidade e redução de mão-de-obra, as calibradoras eletrônicas da MVisia garantem um maior controle da sua produção através de relatórios de produtividade detalhados (quantidade em cada tamanho, produção diária, semanal, etc).</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4 mb-40">
-              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
-                <div class="body">
-                  <h4 class="title">Assistência técnica</h4>
-                  <p>A MVisia é uma empresa 100% brasileira. Isso significa que além de ser um produto sem os altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, tanto presencialmente quando pela internet. Respondemos com agilidade as chamadas que são abertas.</p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-      <!-- section end -->
-
-      <!-- section start -->
-      <div class="light-gray-bg pv-70 section">
-        <div class="container">
-          <h3>Especificações técnicas</h3>
-          <div class="separator-2"></div>        
-          <div class="col-md-12 mb-40">
-            <ul>
-              <li><i class="icon-default-green icon-right-open-1"></i>Produtividade de até 600 kg/hora;</li>
-              <li><i class="icon-default-green icon-right-open-1"></i>Até 6 classificações de tamanho + 1 para defeitos + 1 para tomates verdes;</li>
-              <li><i class="icon-default-green icon-right-open-1"></i>Alimentação 220 V;</li>
-              <li><i class="icon-default-green icon-right-open-1"></i>É necessário linha de ar comprimido;</li>
-              <li><i class="icon-default-green icon-right-open-1"></i>Dimensões: 6 m (comprimento) x 1 m (largura) x 2 m (altura).</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!-- section end -->
-
-      <!-- section start -->
-        <div class="pv-70 section mt-20">
-          <div class="container">
-            <h3>Veja outros cases</h3>
-            <div class="separator-2"></div>
-            <a class="btn radius-2 btn-default-transparent btn-hvr" href="page-case-2.html">Sistema automático de qualificação de uvas</a>
-            <a class="btn radius-2 btn-default-transparent btn-hvr" href="page-case-3.html">Seletora automática de mudas florestais</a>
-            <a class="btn radius-2 btn-default-transparent btn-hvr" href="page-case-4.html">Seletora automática de mudas de flores</a>
-          </div>
-        </div>
-      <!-- section end -->
       <!-- main-container end -->
 
-      <!-- footer start -->
-      <footer id="footer" class="clearfix ">
-
-      </footer>
-      <!-- footer end -->
     </div>
     <!-- page-wrapper end -->
 
